# nelson_rules

./: .gitignore  LICENSE  README.md  nelson_rules.py  pyproject.toml
src/nelson_rules/: __init__.py  nelson_rules.py
tests/: test_input_data.py  test_rules.py
